# actionheadergen

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: headergenerator.h  interleafhandler.h
src/: headergenerator.cpp  interleafhandler.cpp  main.cpp
